# cbg-framework

./: .gitignore  CBG_ALGORITHM_VISUAL.md  CLAUDE.md  DATASET_ANALYSIS.md  KICK_START.md  MILLION_SCALE_FUNCTIONS_EXPLAINED.md  OFFLINE_INSTALL.md  analysis.sh  cli.sh  default.py  install.sh  install_offline.sh  package_offline.sh  pyproject.toml  requirements.txt  run_country_finals.sh  run_geo_cluster.sh  run_geo_finals.sh  start_clickhouse.sh  tutorial.sh
analysis/: cbg_tutorial.ipynb  datasets.ipynb  million_scale.ipynb  plot.ipynb
datasets/: create_datasets.ipynb
notes/: 2026-01-28-cbg-analysis.md  2026-05-15-cbg-related-work-datasets.md  2026-05-15-dataset-characterization.md  2026-05-17-spotter-normality-check.md  2026-05-19-circle-intersections-geometry.md  2026-05-19-km-to-degree-circle-conversion.md  2026-05-19-local-projection-examples.md  2026-05-19-sobol-vs-uniform-sampling.md  2026-05-21-snakemake-primer.md  2026-05-24-dist-geo-and-kfold-round-robin.md  2026-05-25-city-dedup-method.md  2026-05-25-ripe-smoke-findings-and-paper-shape.md  2026-05-26-cbg-data-and-pipeline-walkthrough.md  2026-05-27-circle-filter-rerun-results.md  2026-05-27-mtl-blockers.md  2026-05-28-cbg-memory-footprint.md  2026-05-28-octant-multipolygon-behavior.md  2026-06-01-cbg-variant-ranking-full-region.md  2026-06-01-cbg-variant-ranking-home-continent.md  2026-06-02-randomness-determinism-assessment.md  2026-06-18-closest-airport-eval-decisions.md  2026-06-19-reverse-geocoder-granularity.md  2026-06-21-cluster-answer-space-eval-flow.md  2026-06-21-cluster-eval-design-and-usage.md  2026-06-22-region-overlap-confidence.md  (+1 more)
(+654 files in other folders)
