[project]
name = "geoscale"
version = "1.0.0"
description = "Geolocation reproduction paper — IMC 2023"
readme = "README.md"
requires-python = ">=3.11,<4.0"
authors = [
    { name = "Danaelmilo", email = "milo2.dreyfus@gmail.com" },
]
dependencies = [
    # Core scientific stack
    "numpy (>=1.26.4,<2.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "pyarrow (>=16.0.0)",
    "scipy (>=1.11.4,<2.0.0)",
    "matplotlib (>=3.8.0,<4.0.0)",

    # Geospatial
    "shapely (>=2.1.2,<3.0.0)",
    "pyproj (>=3.7.2,<4.0.0)",
    "geopandas (>=1.1.1,<2.0.0)",
    "rasterio (>=1.4.3,<2.0.0)",
    "cartopy (>=0.25.0,<0.26.0)",
    "geopy (>=2.3.0,<3.0.0)",
    "geom-median (>=0.1.0,<0.2.0)",

    # Benchmark / workflow / runtime instrumentation
    "psutil (>=7.2.2)",
    "typer (>=0.25.1,<1.0.0)",
    "snakemake (>=9.19.0,<10.0.0)",

    # I/O + serialization
    "requests (>=2.17.0,<3.0.0)",
    "python-dotenv (>=0.20.0,<1.0.0)",
    "ujson (>=5.8.0,<6.0.0)",
    "beautifulsoup4 (>=4.12.0,<5.0.0)",
    "python-dateutil (>=2.8.0,<3.0.0)",

    # RIPE Atlas / measurement data path
    "clickhouse-driver (>=0.2.6,<0.3.0)",
    "dnspython (>=2.4.1,<3.0.0)",
    "overpy (>=0.6,<0.7)",
    "pyasn (>=1.6.2,<2.0.0)",

    # Notebooks (analysis/*.ipynb)
    "ipykernel (>=6.24.0,<7.0.0)",
    "jupyter (>=1.0.0,<2.0.0)",
]

[tool.poetry]
packages = [
    { include = "scripts" },
]

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"
